# substrate-rnd

./: Cargo.toml  Makefile.toml  README.md
backend/: Cargo.toml
blockchain/: Makefile.toml
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: custom.rs  government.rs  lib.rs
blockchain/runtime/wasm/: Cargo.toml  build.sh
blockchain/src/: service.rs
frontend/src/: Actions.js  App.js  Database.js  Government.js  GovernmentState.js
runtime/src/: custom.rs  lib.rs
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs
