[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-rnd-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-rnd-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-rnd-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
